исправил метод в dll и вызов в exe

--- a/1/FirstTask/FirstTask/FirstTask.csproj
+++ b/1/FirstTask/FirstTask/FirstTask.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <Reference Include="WordCounter">
-      <HintPath>WordCounter.dll</HintPath>
+      <HintPath>..\..\WordCounter\WordCounter\bin\Release\WordCounter.dll</HintPath>
     </Reference>
   </ItemGroup>
 
